# KeyPop

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: build.yml
Documentation/: GUIDE.en.md
app/: app.js  keyboards.js  lessons.js  styles.css
docs/: ARCHITECTURE.md  GUIDE.fr.md  GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
web/app/: app.js  i18n.js  keyboards.js  paths.js  storage.js  styles.css  typing.js
web/app/i18n/: en.js  fr.js
web/catalogue/: advanced.kp  default.kp  index.json  phrases-du-quotidien.json  rangee-du-milieu-ferme.json
